5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4062/executions/1601_2425.log
== TEST (2019-04-01 10:44:26) 
-- CODE:
a =  float(input("distancia percorrida: "))
b = float(input("quantidade de conbutivel gasto: "))
c = a//c
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c = a//c
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 10:44:36) 
-- CODE:
a =  float(input("distancia percorrida: "))
b = float(input("quantidade de conbutivel gasto: "))
c = a//c
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c = a//c
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 10:44:36) 
-- CODE:
a =  float(input("distancia percorrida: "))
b = float(input("quantidade de conbutivel gasto: "))
c = a//c
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c = a//c
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 10:44:36) 
-- CODE:
a =  float(input("distancia percorrida: "))
b = float(input("quantidade de conbutivel gasto: "))
c = a//c
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c = a//c
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 10:44:36) 
-- CODE:
a =  float(input("distancia percorrida: "))
b = float(input("quantidade de conbutivel gasto: "))
c = a//c
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c = a//c
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 10:44:37) 
-- CODE:
a =  float(input("distancia percorrida: "))
b = float(input("quantidade de conbutivel gasto: "))
c = a//c
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c = a//c
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 10:52:41) 
-- CODE:
a =  float(input("distancia percorrida: "))
b = float(input("quantidade de conbutivel gasto: "))
c = a/c
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c = a/c
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 11:14:44) 
-- CODE:
a =  float(input("distancia percorrida: "))
b = float(input("quantidade de conbutivel gasto: "))
c = a//b
print(c)
-- OUTPUT:
14.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 11:15:24) 
-- CODE:
a =  float(input("distancia percorrida: "))
b = float(input("quantidade de conbutivel gasto: "))
c = a//b
print(c + "km/l")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(c + "km/l")
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 11:15:28) 
-- CODE:
a =  float(input("distancia percorrida: "))
b = float(input("quantidade de conbutivel gasto: "))
c = a//b
print(c + "km/l")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(c + "km/l")
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 11:30:11) 
-- CODE:
a =  float(input("distancia percorrida: "))
b = float(input("quantidade de conbutivel gasto: "))
c = a//b
print(float(round(c, 2))
-- ERROR:
File "XXXX", line 5
    
                            ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 11:35:28) 
-- CODE:
a =  float(input("distancia percorrida: "))
b = float(input("quantidade de combutivel acrescentado: "))
c = a//b
print(float(round(c, 2))
-- ERROR:
File "XXXX", line 5
    
                            ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 11:36:18) 
-- CODE:
a =  float(input("distancia percorrida: "))
b = float(input("quantidade de combutivel acrescentado: "))
c = a//b
print(float(round(c, 2)))
-- OUTPUT:
14.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 11:36:20) 
-- CODE:
a =  float(input("distancia percorrida: "))
b = float(input("quantidade de combutivel acrescentado: "))
c = a//b
print(round(c, 2))
-- OUTPUT:
14.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 11:38:13) 
-- CODE:
a =  float(input("distancia percorrida: "))
b = float(input("quantidade de combutivel acrescentado: "))
c = a//b
print(round(c, 2)"km/l")
-- ERROR:
File "XXXX", line 4
    print(round(c, 2)"km/l")
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:32:24) 
-- CODE:
a =  float(input("distancia percorrida: "))
b = float(input("quantidade de combutivel acrescentado: "))
c = a//b
print(round(c, 3)"km/l")
-- ERROR:
File "XXXX", line 4
    print(round(c, 3)"km/l")
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:32:38) 
-- CODE:
a =  float(input("distancia percorrida: "))
b = float(input("quantidade de combutivel acrescentado: "))
c = a//b
print(round(c, 3))
-- OUTPUT:
14.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:34:38) 
-- CODE:
a =  float(input("distancia percorrida: "))
b = float(input("quantidade de combutivel acrescentado: "))
c = a//b
c1 = round(c, 3)
print(c1)
-- OUTPUT:
14.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 13:36:23) 
-- CODE:
a =  float(input("distancia percorrida: "))
b = float(input("quantidade de combutivel acrescentado: "))
c = a//b
c1 = round(c, 3)
print(c1, "km/l")
-- EXECUTION TIME:
0.177742
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.0 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.0 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.0 km/l
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:36:41) 
-- CODE:
a =  float(input("distancia percorrida: "))
b = float(input("quantidade de combutivel acrescentado: "))
c = a/b
c1 = round(c, 3)
print(c1, "km/l")
-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 13:36:54) 
-- CODE:
a =  float(input("distancia percorrida: "))
b = float(input("quantidade de combutivel acrescentado: "))
c = a/b
c1 = round(c, 3)
print(c1, "km/l")
-- EXECUTION TIME:
0.165633
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
